[gd_scene load_steps=13 format=3 uid="uid://ddmaeqngj8dkt"]

[ext_resource type="Script" uid="uid://dmjk3t62d505j" path="res://scripts/inimigos.gd" id="1_3o5m6"]
[ext_resource type="Texture2D" uid="uid://cd7y4kmfqrmnw" path="res://sprite_sheet_128x32.png" id="2_8fky0"]
[ext_resource type="Texture2D" uid="uid://xggt3kgotr65" path="res://die_animation.png" id="4_60u6h"]
[ext_resource type="Texture2D" uid="uid://g8l7kgalw8h5" path="res://sprite_sheet_attack_resized (1).png" id="4_ark0a"]
[ext_resource type="PackedScene" uid="uid://blmqo1kxwdly4" path="res://players/hitbox.tscn" id="5_60u6h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3o5m6"]
size = Vector2(16, 19.5)

[sub_resource type="Animation" id="Animation_xcgfk"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8fky0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8ge16"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ark0a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.133333, 0, 0.166667, 0.3, 0.433333, 0.6, 0.733333, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_60u6h"]
resource_name = "hurt"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_60u6h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333334, 0.166667, 0.366667, 0.6, 0.766667, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_jlyj2"]
resource_name = "walk"
length = 2.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8fky0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333334, 0.566667, 1.03333, 1.56667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60ttj"]
_data = {
&"RESET": SubResource("Animation_xcgfk"),
&"attack": SubResource("Animation_8ge16"),
&"hurt": SubResource("Animation_60u6h"),
&"walk": SubResource("Animation_jlyj2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60u6h"]
size = Vector2(13, 1)

[node name="inimigo" type="CharacterBody2D" groups=["enemys"]]
position = Vector2(0, -9)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_3o5m6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(10.2917, -12.5)
scale = Vector2(1.10677, 1.15625)
texture = ExtResource("2_8fky0")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, -4)
shape = SubResource("RectangleShape2D_3o5m6")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_60ttj")
}
autoplay = "walk"
speed_scale = 2.0

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(3, -2)
target_position = Vector2(-7, 0)
collision_mask = 2

[node name="right_detector" type="RayCast2D" parent="."]
position = Vector2(17, -3)
target_position = Vector2(10, 0)
collision_mask = 2

[node name="hitbox" parent="." instance=ExtResource("5_60u6h")]

[node name="collision2" type="CollisionShape2D" parent="hitbox"]
position = Vector2(10.5, -23.5)
shape = SubResource("RectangleShape2D_60u6h")

[connection signal="animation_finished" from="anim" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
